--- a/pom.xml
+++ b/pom.xml
@@ -47,7 +47,7 @@
                 </configuration>
             </plugin>
             
-            <!--<plugin>
+            <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>exec-maven-plugin</artifactId>
                 <version>1.6.0</version>
@@ -81,7 +81,7 @@
                         </goals>
                     </execution>
                 </executions>
-            </plugin>-->
+            </plugin>
             
             <plugin>
             <groupId>org.apache.maven.plugins</groupId>
