--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,11 @@
             <artifactId>jaxrs-ri</artifactId>
             <version>2.27</version>
         </dependency>
+        <dependency>
+            <groupId>com.ibm.watson.developer_cloud</groupId>
+            <artifactId>java-sdk</artifactId>
+            <version>5.4.0</version>
+        </dependency>
     </dependencies>
 
     <build>
